--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,8 +24,10 @@
   },
   "plugins": ["react", "@typescript-eslint", "prettier", "react-hooks", "jsx-a11y", "import"],
   "rules": {
+    "react/require-default-props": 0,
     "react/react-in-jsx-scope": 0,
     "react/jsx-props-no-spreading": ["off"],
-    "react/function-component-definition": [2, { "namedComponents": "arrow-function" }]
+    "react/function-component-definition": [2, { "namedComponents": "arrow-function" }],
+    "import/prefer-default-export": "off"
   }
 }
