--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "classnames": "^2.3.2",
     "eslint-config-next": "13.4.5",
     "next": "13.4.5",
     "react": "18.2.0",
