--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
   "rules": {
     "react/react-in-jsx-scope": 0,
     "react/jsx-props-no-spreading": ["off"],
-    "react/function-component-definition": [2, { "namedComponents": "arrow-function" }]
+    "react/function-component-definition": [2, { "namedComponents": "arrow-function" }],
+    "import/prefer-default-export": ["off"]
   }
 }
