--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -21,13 +25,30 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@component/*": ["./src/component/*"],
-      "@styles/*": [".src/styles/*"],
-      "@hooks/*": [".src/hooks/*"],
-      "@utils/*": [".src/utils/*"],
-      "@type/*": [".src/type/*"]
+      "@component/*": [
+        "./src/component/*"
+      ],
+      "@styles/*": [
+        ".src/styles/*"
+      ],
+      "@hooks/*": [
+        ".src/hooks/*"
+      ],
+      "@utils/*": [
+        ".src/utils/*"
+      ],
+      "@type/*": [
+        ".src/type/*"
+      ]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
