--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-inlinesvg": "^3.0.3",
     "typescript": "5.1.3"
   },
   "devDependencies": {
@@ -46,6 +47,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.12",
     "husky": "^8.0.3",
+    "path-browserify": "^1.0.1",
     "prettier": "^2.8.8",
     "sass": "^1.63.3",
     "storybook": "^7.0.20",
