--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
     "react/react-in-jsx-scope": 0,
     "react/jsx-props-no-spreading": ["off"],
     "react/function-component-definition": [2, { "namedComponents": "arrow-function" }],
-    "import/prefer-default-export": ["off"]
+    "import/prefer-default-export": ["off"],
+    "react/require-default-props": ["off"]
   }
 }
