--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "18.2.5",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.9",
     "eslint-config-next": "13.4.5",
     "next": "13.4.5",
     "react": "18.2.0",
