--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.9",
     "eslint-config-next": "13.4.5",
     "next": "13.4.5",
     "react": "18.2.0",
