--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,8 @@
     "react/jsx-props-no-spreading": ["off"],
     "react/function-component-definition": [2, { "namedComponents": "arrow-function" }],
     "import/prefer-default-export": ["off"],
-    "react/require-default-props": ["off"]
+    "react/require-default-props": ["off"],
+    "jsx-a11y/no-static-element-interactions": "off",
+    "jsx-a11y/click-events-have-key-events": "off"
   }
 }
