--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@remirror/pm": "^2.0.8",
     "@remirror/react": "^2.0.35",
     "@remirror/react-editors": "^1.0.38",
+    "@types/lodash": "^4.14.200",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
@@ -23,6 +24,7 @@
     "classnames": "^2.3.2",
     "dayjs": "^1.11.9",
     "eslint-config-next": "13.4.5",
+    "lodash": "^4.17.21",
     "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
