--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.5.1",
+    "@reduxjs/toolkit": "^1.9.7",
     "@remirror/pm": "^2.0.8",
     "@remirror/react": "^2.0.35",
     "@remirror/react-editors": "^1.0.38",
@@ -26,10 +27,12 @@
     "eslint-config-next": "13.4.5",
     "lodash": "^4.17.21",
     "next": "13.4.5",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-inlinesvg": "^3.0.3",
+    "react-redux": "^8.1.3",
     "remirror": "^2.0.36",
     "typescript": "5.1.3"
   },
