--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hook-form": "^7.45.2",
     "react-inlinesvg": "^3.0.3",
     "react-redux": "^8.1.3",
+    "react-toastify": "^9.1.3",
     "remirror": "^2.0.36",
     "typescript": "5.1.3"
   },
